tests/errors/e_tstring2.pyx
# mode: error

# This is split into many sub-files because some errors terminate the parser

t'{!x}'

_ERRORS = """
5:3: Expected an identifier or literal
"""
